--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.1.3",
+    "@angular/animations": "^8.1.3",
+    "@angular/cdk": "^8.1.3",
     "@angular/common": "~8.1.3",
     "@angular/compiler": "~8.1.3",
     "@angular/core": "~8.1.3",
     "@angular/forms": "~8.1.3",
+    "@angular/material": "^8.1.3",
     "@angular/platform-browser": "~8.1.3",
     "@angular/platform-browser-dynamic": "~8.1.3",
+    "@angular/flex-layout": "^7.0.0-beta.23",
     "@angular/router": "~8.1.3",
+    "pusher-js": "^4.4.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -30,6 +34,7 @@
     "@angular/language-service": "~8.1.3",
     "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
+    "@types/pusher-js": "^4.2.2",
     "@types/jasminewd2": "~2.0.3",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
